Fixed the bleeding through of the pygments color scheme into math.

--- a/sass/base.sass
+++ b/sass/base.sass
@@ -217,6 +217,8 @@ pre
     margin-right: 5%
     // border: 2px solid #111
 
+.MathJax_Display span
+    color: $link-color
 
 @media screen and (max-width: 900px), screen and (max-device-width: 900px)
     #banner
